appId: si.tryweave
name: WEA-10 S18 ios unregistered email password and code
---
- launchApp
- extendedWaitUntil:
    visible: Welcome back
    timeout: 30000
- tapOn: Email and password
- tapOn:
    id: field-email
- inputText: wea10-unregistered+clerk_test@example.com
- pressKey: enter
- tapOn:
    id: field-password
- inputText: wea10-non-secret-invalid-password
- pressKey: enter
- tapOn: '^Log in$'
- extendedWaitUntil:
    visible: An existing account is required. Contact your administrator.
    timeout: 40000
- assertNotVisible: Logout
- tapOn: Email code
- tapOn: Send code
- extendedWaitUntil:
    visible: An existing account is required. Contact your administrator.
    timeout: 40000
- assertNotVisible: Logout
- assertNotVisible: Verify code
- takeScreenshot: unregistered-email
